--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
             <% else %>   
               <div class="pc">
               <ul>
-                <li id="signup"><%= link_to "登録する", new_user_registration_path, method: :get %></li>
+                <li id="signup"><%= link_to "登録する", new_user_registration_path %></li>
                 <li><%= link_to "ログイン", posts_path %></li>
               </ul>
               </div>           
