--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,7 +23,7 @@
       <% @posts.each do |t| %>
         <div class="post">
           <div class="post-left">
-            <%= image_tag t.user.image_url, size: "250×200" if t.user.image? %>
+            <%= image_tag t.user.image_url.to_s, size: "250×200" if t.user.image? %>
             <div class="time">
               <%= t.created_at.to_s(:datetime_jp) %>
             </div>
