--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -14,7 +14,7 @@
     </div>
     <br>
     <div class="actions">
-      <%= button_to "登録する", new_user_registration_path, method: :get %>
+      <%= link_to "登録する", new_user_registration_path %>
     </div>
     </div>
   </div>
