--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -64,10 +64,12 @@
 .actions a{
   height: 50px;
   width: 500px;
+  line-height: 50px;
   background-color: #0084FE;
   border: solid 0;
   border-radius: 30px;
   opacity: 0.6;
+  margin: 0 auto;
   margin-bottom: 10px;
   display: block;
 }
