--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -445,6 +445,10 @@ div.sp-open span:after {
     width: 100%;
   }
 
+  .actions a{
+    width: 100%;
+  }
+
   .hello h1{
     font-weight: bold;
     font-size:27px;
