--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,5 +1,5 @@
 <main>
-  <% if current_user.email == "19k1e1n04@gmail.com" %>
+  <% if current_user.email == "19k1e1n04@gmail.com" or "yuki1115s@icloud.com" %>
   <div class="container">
     <%= form_for @player do |f| %>
       <div class="field">
