--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>WinningElevenWith</title>
-    <link rel="icon" type="image/x-icon" href="/S__308535301.jpg">
+    <link rel="icon" type="image/x-icon" href="/S__308535301.png">
+    <link rel="apple-touch-icon" href="/S__308535301.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="/S__308535301.png" sizes="192x192">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
