--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
         </div>
       </div>
       <div class="username">
-        <%= @post.user.username %>
+        <%= link_to @post.user.username, user_path(@post.user.id)%> 
       </div>
       <div class="post-right">
         <div class="post-body">
