--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -9,9 +9,11 @@
         </div>
       <% end %>
     </div>
+    <input type="text">
     <div class="users-container">
       <% @players.each do |u| %>
         <div class="user">
+        
           <div class="user-left">
             <%= image_tag u.icon_url ,size: "250×200" if u.icon? %>
           </div>
