--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -9,7 +9,6 @@
         </div>
       <% end %>
     </div>
-    <input type="text">
     <div class="users-container">
       <% @players.each do |u| %>
         <div class="user">
@@ -19,8 +18,8 @@
           </div>
           <div class="user-right">
             <h3><%= link_to u.name, player_path(u.id) %></h3>
-            <!--<%= link_to "編集する", edit_player_path(u.id) %>
-            <%= link_to "削除する", player_path(u.id), method: :delete %> -->
+            <%= link_to "編集する", edit_player_path(u.id) %>
+            <%= link_to "削除する", player_path(u.id), method: :delete %>
  
           </div>
         </div>
