トップページを変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,12 @@ body {
 
 }
 
+.main-container{
+  margin-top: 0;
+  background-image:url("/soccer.jpg");
+  background-size: cover;
+}
+
 body,
 #wrapper {
   display: flex;
