--- a/app/assets/stylesheets/hello.scss
+++ b/app/assets/stylesheets/hello.scss
@@ -32,6 +32,33 @@
 }
 
 .hello button:hover{
-  opacity: 0.9;
-  transition: 0.8s;
+  opacity: 1;
+  transition: 0.6s;
+}
+
+header{
+  display: none;
+  height: 0;
+}
+
+main{
+  padding-top: 0;
+  margin-bottom: 0;
+}
+
+#hello{
+  padding-top: 100px;
+  padding-bottom: 30%;
+}
+
+.main-container{
+  min-height: 100vh;
+}
+
+.new_title{
+  padding-top: 17%;
+}
+
+footer{
+  display:none;
 }
