--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,7 @@
+<%= stylesheet_link_tag "hello", media: "all" %>
 <main>
+  <div class="main-container">
+  
   <div class="container">
   
     <h2  class="new_title">新規登録</h2>
@@ -50,6 +53,7 @@
     <% end %>
 
     <%= render "users/shared/links" %>
+  </div>
   </div>
 </main>
 
