デザイン修正

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -34,7 +34,7 @@
 }
 
 .post-create{
-  background-color: rgba(161, 161, 161, 0.9);
+  background-color: #dbb285;
   margin-top: 7px;
   margin-right: 40px;
   font-weight: bold;
@@ -48,7 +48,7 @@
 }
 
 .post-create:hover{
-  background-color: white;
+  opacity: 0.7;
 }
 
 .post-create a{
