--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,8 +27,9 @@ body {
   overscroll-behavior:none;
   margin: 0;
   font-family: "Hiragino Kaku Gothic ProN", sans-serif;
-  background-image: linear-gradient(-225deg, #2CD8D5 0%, #6B8DD6 48%, #8E37D7 100%);
+  // background-image: linear-gradient(-225deg, #2CD8D5 0%, #6B8DD6 48%, #8E37D7 100%);
   color:white;
+  background-color: #1f4b7b;
 
 }
 
@@ -72,16 +73,16 @@ main{
  header{
    overscroll-behavior:none;
    height: 80px;
-   background: #fff;
+   background: #dbb285;
    width: 100%;
    margin-bottom: 100px;
    position: fixed;
-   border-bottom: 1px solid #F9F9F9;
+   border-bottom: 1px solid #dbb285;
    z-index: 10;
  }
 
  header a{
-   color:black;
+   color:white;
  }
 
  .header-left{
@@ -150,7 +151,7 @@ main{
 
 footer {
   margin-top: auto;
-  background-color: #fff;
+  background-color: #dbb285;
   color:black;
 }
 
