--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -267,6 +267,10 @@ div.sp-open span:after {
 
 
 @media screen and (max-width: 1025px) {
+  header a{
+    color: #000000;
+  }
+
   .header-logo{
     width:50px;
     height: 50px;
